Phase 1.3 complete: Expand Chapter 15 with comprehensive failure scenarios and recovery procedures (38KB addition, Section 15.8)
Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>